# RAM-MSA

./: CMakeLists.txt  LICENSE  README.md
score_tables/: blosum_double  pam250_int
src/: main.cpp  parameters.hpp  utils.hpp
src/Astar/: AnytimeAstar.hpp  AnytimeAstarLinearGap.hpp  AnytimeAstarTemplateHelper.hpp  MultiIndexUtils.hpp  PairwiseHeuristic.hpp
src/NW/: NW.hpp
